# beemaster-acu-lattice

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  config-local.ini  config-uhh.ini  config.ini  docker-compose.yaml  lattice_test.sh  start.sh
cmake/: FindAcu.cmake  FindBroker.cmake  FindRocks.cmake
include/acu/: .storage.h.swp  acu.h  aggregation.h  correlation.h  incoming_alert.h  latticeCorrelation.h  outgoing_alert.h  receiver.h  sender.h  storage.h  threshold.h
src/: .Makefile.swp  .latticeCorrelation.cc.swp  .latticeStorage.cc.swp  .rocks.cc.swp  CMakeLists.txt  Makefile  acu.cc  aggregation.cc  batch_aggregation.cc  batch_aggregation.h  batch_logging_correlation.cc  batch_logging_correlation.h  config_parser.cc  correlation.cc  incoming_alert.cc  lattice.cc  latticeCorrelation.cc  latticeCorrelation.h  latticeCorrelation2.cc  latticeStorage.cc  lattice_aggregation.cc  lattice_aggregation.h  lattice_alert_mapper.cc  lattice_alert_mapper.h  lattice_correlation.cc  lattice_correlation.h  lattice_incoming_alert.cc  lattice_incoming_alert.h  lattice_outgoing_alert.cc  lattice_outgoing_alert.h  lattice_threshold.cc  lattice_threshold.h  main.cc  outgoing_alert.cc  receiver.cc  rocks2.cc  rocks_storage.cc  rocks_storage.h  sender.cc  storage.cc  (+3 more)
test/: CMakeLists.txt  test_lattice.cc  test_vector_storage.cc
